fix(#90): code block overflow issues - updated code block styling and layout (#114)

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -107,3 +107,8 @@ blockquote > p {
   margin-bottom: 0 !important;
   color: var(--primaryText) !important;
 }
+
+.token-line {
+  width: max-content !important;
+  padding-right: 14px;
+}
